<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/darkGrey"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPlayAgain"
        android:id="@+id/buttonPlayAgain"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="playAgain"
        android:textSize="25dp"
        android:visibility="invisible"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerX"
        android:id="@+id/playerXTextView"
        android:layout_above="@+id/buttonPlayAgain"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerXScore"
        android:id="@+id/playerXScoreTextView"
        android:layout_above="@+id/buttonPlayAgain"
        android:layout_toRightOf="@+id/playerXTextView"
        android:layout_toEndOf="@+id/playerXTextView"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerO"
        android:id="@+id/playerOTextView"
        android:layout_above="@+id/buttonPlayAgain"
        android:layout_toLeftOf="@+id/playerOScoreTextView"
        android:layout_toStartOf="@+id/playerOScoreTextView"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerOScore"
        android:id="@+id/playerOScoreTextView"
        android:layout_above="@+id/buttonPlayAgain"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:id="@+id/winnerTextView"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textAlignment="inherit"
        android:layout_below="@+id/messageTextView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerXMove"
        android:id="@+id/messageTextView"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/winnerTextView"
        android:layout_marginTop="12dp"
        android:layout_above="@+id/playerXTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton00"
            android:layout_gravity="left|top"
            android:src="@drawable/space"
            android:onClick="onClick00" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton01"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/space"
            android:onClick="onClick01" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton02"
            android:layout_gravity="right|top"
            android:src="@drawable/space"
            android:onClick="onClick02" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton10"
            android:layout_gravity="left|center_vertical"
            android:src="@drawable/space"
            android:onClick="onClick10" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton11"
            android:layout_gravity="center"
            android:src="@drawable/space"
            android:onClick="onClick11" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton12"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/space"
            android:onClick="onClick12" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton20"
            android:layout_gravity="left|bottom"
            android:src="@drawable/space"
            android:onClick="onClick20" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton21"
            android:layout_gravity="center_horizontal|bottom"
            android:src="@drawable/space"
            android:onClick="onClick21" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageButton22"
            android:layout_gravity="right|bottom"
            android:src="@drawable/space"
            android:onClick="onClick22" />
    </FrameLayout>

</RelativeLayout>
